--- a/package.json
+++ b/package.json
@@ -12,36 +12,35 @@
     },
     "homepage": "https://github.com/sensedeep/onetable-controller",
     "dependencies": {
-        "dynamodb-onetable": "^2.0",
-        "onetable-migrate": "^1.1.2",
+        "@aws-sdk/client-dynamodb": "^3.410.0",
+        "@aws-sdk/util-dynamodb": "^3.410.0",
+        "dynamodb-onetable": "^2",
+        "onetable-migrate": "^1",
         "senselogs": "^1"
     },
     "devDependencies": {
-        "aws-sdk": "^2.1009.0",
-        "@types/jest": "^27.0.2",
-        "@types/node": "^16.11.0",
-        "dotenv": "^10.0.0",
-        "esbuild": "^0.13.7",
-        "esbuild-register": "^3.0.0",
-        "eslint": "^8.0.1",
-        "jest": "^27.2.5",
-        "serverless": "^2.63.0",
-        "serverless-esbuild": "^1.20.0",
-        "serverless-offline": "^8.2.0"
+        "@types/jest": "^29.5.4",
+        "@types/node": "^20.6.0",
+        "esbuild": "^0.13.15",
+        "esbuild-register": "^3.3.3",
+        "eslint": "^8.49.0",
+        "jest": "^29.6.4",
+        "serverless": "^2.72.3",
+        "serverless-esbuild": "^1.31.0"
     },
     "scripts": {
         "test": "echo jest",
         "test-cov": "echo jest --coverage",
         "prepare": "npm run build",
-        "lint": "eslint src",
-        "build": "esbuild --platform=node src/controller.js --bundle --outdir=.build",
+        "lint": "eslint Controller.js",
+        "build": "esbuild --platform=node Controller.js --bundle --outdir=.build",
         "deploy": "sls deploy",
         "destroy": "sls remove",
         "start": "sls offline --httpPort 5008 --lambdaPort 5009 --noAuth -s dev",
         "debug": "export XSLS_DEBUG=* && node --inspect ./node_modules/.bin/serverless offline  --httpPort 5008 --lambdaPort 5009 --noAuth -s dev"
     },
-    "engines": {
-        "node": ">=12.0.0",
+    "__engines": {
+        "node": ">=16.0.0",
         "npm": ">=7.0.0"
     }
 }
